Pokemon service loading data from api

--- a/src/app/pokemon-card/pokemon-card.component.sass
+++ b/src/app/pokemon-card/pokemon-card.component.sass
@@ -21,6 +21,7 @@
         color: #313131
         font-size: 145%
         margin: 0.5em 0px 5px
+        text-transform: capitalize
     
     &__types
         display: flex
@@ -35,7 +36,7 @@
         text-transform: none
         font-size: 11px
         text-align: center
-        background: yellow
+        text-transform: capitalize
 
         &--grass
             background: #9bcc50
